--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -5,7 +5,7 @@ $mdi-font-weight:      "normal";
 $mdi-font-path:        "../fonts" !default;
 $mdi-font-size-base:   24px !default;
 $mdi-css-prefix:       mdi !default;
-$mdi-version:          "7.0.96" !default;
+$mdi-version:          "7.1.96" !default;
 
 $mdi-icons: (
   "ab-testing": F01C9,
@@ -129,6 +129,8 @@ $mdi-icons: (
   "account-switch-outline": F04CB,
   "account-sync": F191B,
   "account-sync-outline": F191C,
+  "account-tag": F1C1B,
+  "account-tag-outline": F1C1C,
   "account-tie": F0CE3,
   "account-tie-hat": F1898,
   "account-tie-hat-outline": F1899,
@@ -661,6 +663,7 @@ $mdi-icons: (
   "audio-video": F093D,
   "audio-video-off": F11B6,
   "augmented-reality": F0850,
+  "aurora": F1BB9,
   "auto-download": F137E,
   "auto-fix": F0068,
   "auto-upload": F0069,
@@ -739,6 +742,8 @@ $mdi-icons: (
   "bandage": F0DAF,
   "bank": F0070,
   "bank-check": F1655,
+  "bank-circle": F1C03,
+  "bank-circle-outline": F1C04,
   "bank-minus": F0DB0,
   "bank-off": F1656,
   "bank-off-outline": F1657,
@@ -1330,6 +1335,8 @@ $mdi-icons: (
   "camera-image": F08CC,
   "camera-iris": F0104,
   "camera-lock": F1A14,
+  "camera-lock-open": F1C0D,
+  "camera-lock-open-outline": F1C0E,
   "camera-lock-outline": F1A15,
   "camera-marker": F19A7,
   "camera-marker-outline": F19A8,
@@ -1594,6 +1601,7 @@ $mdi-icons: (
   "chart-multiline": F08D4,
   "chart-multiple": F1213,
   "chart-pie": F012B,
+  "chart-pie-outline": F1BDF,
   "chart-ppf": F1380,
   "chart-sankey": F11DF,
   "chart-sankey-variant": F11E0,
@@ -1865,22 +1873,53 @@ $mdi-icons: (
   "closed-caption-outline": F0DBD,
   "cloud": F015F,
   "cloud-alert": F09E0,
+  "cloud-alert-outline": F1BE0,
+  "cloud-arrow-down": F1BE1,
+  "cloud-arrow-down-outline": F1BE2,
+  "cloud-arrow-left": F1BE3,
+  "cloud-arrow-left-outline": F1BE4,
+  "cloud-arrow-right": F1BE5,
+  "cloud-arrow-right-outline": F1BE6,
+  "cloud-arrow-up": F1BE7,
+  "cloud-arrow-up-outline": F1BE8,
   "cloud-braces": F07B5,
-  "cloud-check": F0160,
-  "cloud-check-outline": F12CC,
+  "cloud-cancel": F1BE9,
+  "cloud-cancel-outline": F1BEA,
+  "cloud-check": F1BEB,
+  "cloud-check-outline": F1BEC,
+  "cloud-check-variant": F0160,
+  "cloud-check-variant-outline": F12CC,
   "cloud-circle": F0161,
+  "cloud-circle-outline": F1BED,
+  "cloud-clock": F1BEE,
+  "cloud-clock-outline": F1BEF,
+  "cloud-cog": F1BF0,
+  "cloud-cog-outline": F1BF1,
   "cloud-download": F0162,
   "cloud-download-outline": F0B7D,
   "cloud-lock": F11F1,
+  "cloud-lock-open": F1BF2,
+  "cloud-lock-open-outline": F1BF3,
   "cloud-lock-outline": F11F2,
+  "cloud-minus": F1BF4,
+  "cloud-minus-outline": F1BF5,
+  "cloud-off": F1BF6,
   "cloud-off-outline": F0164,
   "cloud-outline": F0163,
   "cloud-percent": F1A35,
   "cloud-percent-outline": F1A36,
+  "cloud-plus": F1BF7,
+  "cloud-plus-outline": F1BF8,
   "cloud-print": F0165,
   "cloud-print-outline": F0166,
   "cloud-question": F0A39,
-  "cloud-refresh": F052A,
+  "cloud-question-outline": F1BF9,
+  "cloud-refresh": F1BFA,
+  "cloud-refresh-outline": F1BFB,
+  "cloud-refresh-variant": F052A,
+  "cloud-refresh-variant-outline": F1BFC,
+  "cloud-remove": F1BFD,
+  "cloud-remove-outline": F1BFE,
   "cloud-search": F0956,
   "cloud-search-outline": F0957,
   "cloud-sync": F063F,
@@ -2198,6 +2237,7 @@ $mdi-icons: (
   "currency-rub": F01B1,
   "currency-rupee": F1976,
   "currency-sign": F07BE,
+  "currency-thb": F1C05,
   "currency-try": F01B2,
   "currency-twd": F07BF,
   "currency-uah": F1B9B,
@@ -2637,6 +2677,10 @@ $mdi-icons: (
   "eye-check-outline": F0D05,
   "eye-circle": F0B94,
   "eye-circle-outline": F0B95,
+  "eye-lock": F1C06,
+  "eye-lock-open": F1C07,
+  "eye-lock-open-outline": F1C08,
+  "eye-lock-outline": F1C09,
   "eye-minus": F1026,
   "eye-minus-outline": F1027,
   "eye-off": F0209,
@@ -2745,6 +2789,8 @@ $mdi-icons: (
   "file-document": F0219,
   "file-document-alert": F1A97,
   "file-document-alert-outline": F1A98,
+  "file-document-arrow-right": F1C0F,
+  "file-document-arrow-right-outline": F1C10,
   "file-document-check": F1A99,
   "file-document-check-outline": F1A9A,
   "file-document-edit": F0DC8,
@@ -3618,6 +3664,9 @@ $mdi-icons: (
   "helicopter": F0AC2,
   "help": F02D6,
   "help-box": F078B,
+  "help-box-multiple": F1C0A,
+  "help-box-multiple-outline": F1C0B,
+  "help-box-outline": F1C0C,
   "help-circle": F02D7,
   "help-circle-outline": F0625,
   "help-network": F06F5,
@@ -3794,6 +3843,7 @@ $mdi-icons: (
   "image-filter-center-focus-strong-outline": F0F00,
   "image-filter-center-focus-weak": F02F2,
   "image-filter-drama": F02F3,
+  "image-filter-drama-outline": F1BFF,
   "image-filter-frames": F02F4,
   "image-filter-hdr": F02F5,
   "image-filter-none": F02F6,
@@ -3908,6 +3958,7 @@ $mdi-icons: (
   "keyboard-backspace": F030D,
   "keyboard-caps": F030E,
   "keyboard-close": F030F,
+  "keyboard-close-outline": F1C00,
   "keyboard-esc": F12B7,
   "keyboard-f1": F12AB,
   "keyboard-f10": F12B4,
@@ -4150,6 +4201,12 @@ $mdi-icons: (
   "lock-open-variant-outline": F0FC7,
   "lock-outline": F0341,
   "lock-pattern": F06EA,
+  "lock-percent": F1C12,
+  "lock-percent-open": F1C13,
+  "lock-percent-open-outline": F1C14,
+  "lock-percent-open-variant": F1C15,
+  "lock-percent-open-variant-outline": F1C16,
+  "lock-percent-outline": F1C17,
   "lock-plus": F05FB,
   "lock-plus-outline": F16B2,
   "lock-question": F08EF,
@@ -4959,6 +5016,7 @@ $mdi-icons: (
   "pencil-remove": F0DED,
   "pencil-remove-outline": F0DEE,
   "pencil-ruler": F1353,
+  "pencil-ruler-outline": F1C11,
   "penguin": F0EC0,
   "pentagon": F0701,
   "pentagon-outline": F0700,
@@ -5196,6 +5254,41 @@ $mdi-icons: (
   "printer-off-outline": F1785,
   "printer-outline": F1786,
   "printer-pos": F1057,
+  "printer-pos-alert": F1BBC,
+  "printer-pos-alert-outline": F1BBD,
+  "printer-pos-cancel": F1BBE,
+  "printer-pos-cancel-outline": F1BBF,
+  "printer-pos-check": F1BC0,
+  "printer-pos-check-outline": F1BC1,
+  "printer-pos-cog": F1BC2,
+  "printer-pos-cog-outline": F1BC3,
+  "printer-pos-edit": F1BC4,
+  "printer-pos-edit-outline": F1BC5,
+  "printer-pos-minus": F1BC6,
+  "printer-pos-minus-outline": F1BC7,
+  "printer-pos-network": F1BC8,
+  "printer-pos-network-outline": F1BC9,
+  "printer-pos-off": F1BCA,
+  "printer-pos-off-outline": F1BCB,
+  "printer-pos-outline": F1BCC,
+  "printer-pos-pause": F1BCD,
+  "printer-pos-pause-outline": F1BCE,
+  "printer-pos-play": F1BCF,
+  "printer-pos-play-outline": F1BD0,
+  "printer-pos-plus": F1BD1,
+  "printer-pos-plus-outline": F1BD2,
+  "printer-pos-refresh": F1BD3,
+  "printer-pos-refresh-outline": F1BD4,
+  "printer-pos-remove": F1BD5,
+  "printer-pos-remove-outline": F1BD6,
+  "printer-pos-star": F1BD7,
+  "printer-pos-star-outline": F1BD8,
+  "printer-pos-stop": F1BD9,
+  "printer-pos-stop-outline": F1BDA,
+  "printer-pos-sync": F1BDB,
+  "printer-pos-sync-outline": F1BDC,
+  "printer-pos-wrench": F1BDD,
+  "printer-pos-wrench-outline": F1BDE,
   "printer-search": F1457,
   "printer-settings": F0707,
   "printer-wireless": F0A0B,
@@ -5384,7 +5477,10 @@ $mdi-icons: (
   "remote-off": F0EC4,
   "remote-tv": F0EC5,
   "remote-tv-off": F0EC6,
+  "rename": F1C18,
   "rename-box": F0455,
+  "rename-box-outline": F1C19,
+  "rename-outline": F1C1A,
   "reorder-horizontal": F0688,
   "reorder-vertical": F0689,
   "repeat": F0456,
@@ -5453,8 +5549,10 @@ $mdi-icons: (
   "robot-outline": F167A,
   "robot-vacuum": F070D,
   "robot-vacuum-alert": F1B5D,
+  "robot-vacuum-off": F1C01,
   "robot-vacuum-variant": F0908,
   "robot-vacuum-variant-alert": F1B5E,
+  "robot-vacuum-variant-off": F1C02,
   "rocket": F0463,
   "rocket-launch": F14DE,
   "rocket-launch-outline": F14DF,
@@ -6492,6 +6590,8 @@ $mdi-icons: (
   "tooltip-outline": F0526,
   "tooltip-plus": F0BD6,
   "tooltip-plus-outline": F0527,
+  "tooltip-question": F1BBA,
+  "tooltip-question-outline": F1BBB,
   "tooltip-remove": F1560,
   "tooltip-remove-outline": F1561,
   "tooltip-text": F0528,
