--- a/scss/_var-icons.scss
+++ b/scss/_var-icons.scss
@@ -629,4 +629,5 @@ $adi-icons: (
      "respirador-arm": ea77,
      "respirador-cnaf": ea78,
      "respirador-cnbf": ea73,
+     "file-cancel-outline": e913,
 );
