feat: agregar nuevos iconos

--- a/docs/css/andes-font-ie7-codes.css
+++ b/docs/css/andes-font-ie7-codes.css
@@ -630,3 +630,23 @@
 .adi-respirador-ambu { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xea76;&nbsp;'); }
 .adi-respirador-arm { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xea77;&nbsp;'); }
 .adi-respirador-cnaf { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xea78;&nbsp;'); }
+.adi-maletin-salud { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xea79;&nbsp;'); }
+.adi-compu-listado { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xea7a;&nbsp;'); }
+.adi-compu-rueda { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xea7b;&nbsp;'); }
+.adi-covid-19 { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xea7c;&nbsp;'); }
+.adi-edificios { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xea7d;&nbsp;'); }
+.adi-listado { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xea7e;&nbsp;'); }
+.adi-manos-corazon { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xea7f;&nbsp;'); }
+.adi-merged { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xea80;&nbsp;'); }
+.adi-notas-check { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xea81;&nbsp;'); }
+.adi-notas-editar { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xea82;&nbsp;'); }
+.adi-nota-lapiz { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xea83;&nbsp;'); }
+.adi-notas-mas { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xea84;&nbsp;'); }
+.adi-nota-cruz { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xea85;&nbsp;'); }
+.adi-edificio-otro { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xea86;&nbsp;'); }
+.adi-qr { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xea87;&nbsp;'); }
+.adi-rama { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xea88;&nbsp;'); }
+.adi-union { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xea89;&nbsp;'); }
+.adi-sip-plus { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xea8a;&nbsp;'); }
+.adi-vacuna-check { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xea8b;&nbsp;'); }
+.adi-vacuna-cruz { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xea8c;&nbsp;'); }
