--- a/scss/_var-icons.scss
+++ b/scss/_var-icons.scss
@@ -630,4 +630,24 @@ $adi-icons: (
      "respirador-cnaf": ea78,
      "respirador-cnbf": ea73,
      "file-cancel-outline": e913,
+     "maletin-salud": ea79,
+     "nota-cruz": ea85,
+     "compu-listado": ea7a,
+     "compu-rueda": ea7b,
+     "covid-19": ea7c,
+     "edificios": ea7d,
+     "listado": ea7e,
+     "manos-corazon": ea7f,
+     "merged": ea80,
+     "notas-check": ea81,
+     "vacuna-cruz": ea8c,
+     "vacuna-check": ea8b,
+     "sip-plus": ea8a,
+     "rama": ea88,
+     "qr": ea87,
+     "edificio-otro": ea86,
+     "notas-mas": ea84,
+     "nota-lapiz": ea83,
+     "notas-editar": ea82,
+     "union": ea89,
 );
