--- a/css/andes-icons.css
+++ b/css/andes-icons.css
@@ -1910,6 +1910,66 @@
 .adi-file-cancel-outline:before {
   content: "\e913"; }
 
+.adi-maletin-salud:before {
+  content: "\ea79"; }
+
+.adi-nota-cruz:before {
+  content: "\ea85"; }
+
+.adi-compu-listado:before {
+  content: "\ea7a"; }
+
+.adi-compu-rueda:before {
+  content: "\ea7b"; }
+
+.adi-covid-19:before {
+  content: "\ea7c"; }
+
+.adi-edificios:before {
+  content: "\ea7d"; }
+
+.adi-listado:before {
+  content: "\ea7e"; }
+
+.adi-manos-corazon:before {
+  content: "\ea7f"; }
+
+.adi-merged:before {
+  content: "\ea80"; }
+
+.adi-notas-check:before {
+  content: "\ea81"; }
+
+.adi-vacuna-cruz:before {
+  content: "\ea8c"; }
+
+.adi-vacuna-check:before {
+  content: "\ea8b"; }
+
+.adi-sip-plus:before {
+  content: "\ea8a"; }
+
+.adi-rama:before {
+  content: "\ea88"; }
+
+.adi-qr:before {
+  content: "\ea87"; }
+
+.adi-edificio-otro:before {
+  content: "\ea86"; }
+
+.adi-notas-mas:before {
+  content: "\ea84"; }
+
+.adi-nota-lapiz:before {
+  content: "\ea83"; }
+
+.adi-notas-editar:before {
+  content: "\ea82"; }
+
+.adi-union:before {
+  content: "\ea89"; }
+
 .adi-blank:before {
   content: "\F68C";
   visibility: hidden; }
