--- a/docs/css/andes-font-codes.css
+++ b/docs/css/andes-font-codes.css
@@ -630,3 +630,23 @@
 .adi-respirador-ambu:before { content: '\ea76'; } /* '' */
 .adi-respirador-arm:before { content: '\ea77'; } /* '' */
 .adi-respirador-cnaf:before { content: '\ea78'; } /* '' */
+.adi-maletin-salud:before { content: '\ea79'; } /* '' */
+.adi-compu-listado:before { content: '\ea7a'; } /* '' */
+.adi-compu-rueda:before { content: '\ea7b'; } /* '' */
+.adi-covid-19:before { content: '\ea7c'; } /* '' */
+.adi-edificios:before { content: '\ea7d'; } /* '' */
+.adi-listado:before { content: '\ea7e'; } /* '' */
+.adi-manos-corazon:before { content: '\ea7f'; } /* '' */
+.adi-merged:before { content: '\ea80'; } /* '' */
+.adi-notas-check:before { content: '\ea81'; } /* '' */
+.adi-notas-editar:before { content: '\ea82'; } /* '' */
+.adi-nota-lapiz:before { content: '\ea83'; } /* '' */
+.adi-notas-mas:before { content: '\ea84'; } /* '' */
+.adi-nota-cruz:before { content: '\ea85'; } /* '' */
+.adi-edificio-otro:before { content: '\ea86'; } /* '' */
+.adi-qr:before { content: '\ea87'; } /* '' */
+.adi-rama:before { content: '\ea88'; } /* '' */
+.adi-union:before { content: '\ea89'; } /* '' */
+.adi-sip-plus:before { content: '\ea8a'; } /* '' */
+.adi-vacuna-check:before { content: '\ea8b'; } /* '' */
+.adi-vacuna-cruz:before { content: '\ea8c'; } /* '' */
