--- a/docs/css/andes-font.css
+++ b/docs/css/andes-font.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'andes-font';
-  src: url('../font/andes-font.eot?83816042');
-  src: url('../font/andes-font.eot?83816042#iefix') format('embedded-opentype'),
-       url('../font/andes-font.woff2?83816042') format('woff2'),
-       url('../font/andes-font.woff?83816042') format('woff'),
-       url('../font/andes-font.ttf?83816042') format('truetype'),
-       url('../font/andes-font.svg?83816042#andes-font') format('svg');
+  src: url('../font/andes-font.eot?5691436');
+  src: url('../font/andes-font.eot?5691436#iefix') format('embedded-opentype'),
+       url('../font/andes-font.woff2?5691436') format('woff2'),
+       url('../font/andes-font.woff?5691436') format('woff'),
+       url('../font/andes-font.ttf?5691436') format('truetype'),
+       url('../font/andes-font.svg?5691436#andes-font') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'andes-font';
-    src: url('../font/andes-font.svg?83816042#andes-font') format('svg');
+    src: url('../font/andes-font.svg?5691436#andes-font') format('svg');
   }
 }
 */
@@ -686,3 +686,23 @@
 .adi-respirador-ambu:before { content: '\ea76'; } /* '' */
 .adi-respirador-arm:before { content: '\ea77'; } /* '' */
 .adi-respirador-cnaf:before { content: '\ea78'; } /* '' */
+.adi-maletin-salud:before { content: '\ea79'; } /* '' */
+.adi-compu-listado:before { content: '\ea7a'; } /* '' */
+.adi-compu-rueda:before { content: '\ea7b'; } /* '' */
+.adi-covid-19:before { content: '\ea7c'; } /* '' */
+.adi-edificios:before { content: '\ea7d'; } /* '' */
+.adi-listado:before { content: '\ea7e'; } /* '' */
+.adi-manos-corazon:before { content: '\ea7f'; } /* '' */
+.adi-merged:before { content: '\ea80'; } /* '' */
+.adi-notas-check:before { content: '\ea81'; } /* '' */
+.adi-notas-editar:before { content: '\ea82'; } /* '' */
+.adi-nota-lapiz:before { content: '\ea83'; } /* '' */
+.adi-notas-mas:before { content: '\ea84'; } /* '' */
+.adi-nota-cruz:before { content: '\ea85'; } /* '' */
+.adi-edificio-otro:before { content: '\ea86'; } /* '' */
+.adi-qr:before { content: '\ea87'; } /* '' */
+.adi-rama:before { content: '\ea88'; } /* '' */
+.adi-union:before { content: '\ea89'; } /* '' */
+.adi-sip-plus:before { content: '\ea8a'; } /* '' */
+.adi-vacuna-check:before { content: '\ea8b'; } /* '' */
+.adi-vacuna-cruz:before { content: '\ea8c'; } /* '' */
